--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -191,7 +191,8 @@ doropdown
 .h-top {
     color: #636175;
     text-decoration: none;
-    padding-right: 90%;
+    display: block;
+    width: 100%;
 }
 
 /*@media(max-width:400px){
